objects/Con_Req__c.object
<CustomObject>
    <fields>
        <fullName>AP_Line_CO_Total__c</fullName>
        <description>updated via a Trigger, upon creation of a Change Order with the value in the field Amount of Project CO Total from related project.</description>
        <inlineHelpText>updates with value in the field Amount of Project Change Order Total from related project.</inlineHelpText>
        <label>AP Line CO Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Project the CO is related to</inlineHelpText>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Change Orders</relationshipLabel>
        <relationshipName>Construction_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Cost_Total__c</fullName>
        <formula>( Drive_Rate__c*Drive_Time__c) + (Misc_Materials__c * Current_Change_Order_Subtotal__c) + (Tools__c * Current_Change_Order_Subtotal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <inlineHelpText>Enter notes about the change order here
Including any specifics around the cost breakdown or why you are submitting the CO</inlineHelpText>
        <label>Additional Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adjusted_Contract_Price__c</fullName>
        <formula>IF( RecordType.Name = &quot;Customer Change Order&quot; || RecordType.Name = &quot;Internal Change Order&quot;,  Subtotal__c  +  Current_Change_Order_Subtotal__c ,  IF( RecordType.Name = &quot;Material PO Change&quot;,  Purchase_Order2__r.Total_Freight_Allowed__c  +  Purchase_Order2__r.Total_sales_tax__c, 0 ) +  Original_Unit_Price2__c  +  Prior_Change_Orders_SUB_MAT__c  +  Amount_Requested__c  +  Sales_Tax__c + Max_Freight_Allowance__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Also refers to Adjusted PO value.</inlineHelpText>
        <label>Adjusted Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Original_Contract_Price__c</fullName>
        <formula>ASProject__r.AcctSeed__Opportunity__r.Amount + Current_Change_Order_Subtotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Original Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_System_SizeCOConReq__c</fullName>
        <inlineHelpText>New Adjusted System Size- will be blank if updating inverters or racking. Only calculates if updating modules</inlineHelpText>
        <label>Adjusted System Size-old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjusted_System_Size__c</fullName>
        <inlineHelpText>Adjusted System Size = Current Project System Size + amount from this change order. Only a change in the number of modules will impact the Adjusted System Size.</inlineHelpText>
        <label>Adjusted System Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Requested_Change__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For Construction Requisition record updates.  Tracks the change in the Amount Requested field.  Set by trigger ConReqToconPO.</description>
        <label>Amount Requested Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Requested_Total__c</fullName>
        <formula>Amount_Requested__c  + Sales_Tax__c + Max_Freight_Allowance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Requested Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Requested__c</fullName>
        <inlineHelpText>Amount of CO
Sub and Material CO only</inlineHelpText>
        <label>Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status_Message__c</fullName>
        <formula>IF(ISPICKVAL( Change_Order_Type__c , &quot;System Size or Product Change&quot;)
&amp;&amp;
(ISPICKVAL( Status__c , &quot;Approval Pending&quot;)
 || 
ISPICKVAL( Status__c , &quot;Borrego Approved&quot;)
 || 
ISPICKVAL( Status__c , &quot;New&quot;)), IMAGE(&quot;//chart.googleapis.com/chart?chst=d_text_outline&amp;chld=FF0000|14|l|FFFFFF|_| This system size or product change will not take effect until the Status is Approved by Customer&quot;,&quot;This system size or product change will not take effect until the Status is Approved by Customer&quot;),

IF(ISPICKVAL( Change_Order_Type__c , &quot;System Size or Product Change&quot;)
&amp;&amp;
ISPICKVAL( Status__c , &quot;Approved By Customer&quot;),IMAGE(&quot;//chart.googleapis.com/chart?chst=d_text_outline&amp;chld=006400|14|l|FFFFFF|_| The Products have been updated on the Project Products&quot;,&quot;The Products have been updated on the Project Products&quot;),

IF(ISPICKVAL( Change_Order_Type__c , &quot;System Size or Product Change&quot;)
&amp;&amp;
ISPICKVAL( Status__c , &quot;Rejected&quot;), &quot;Rejected&quot;,

IF(ISPICKVAL( Change_Order_Type__c , &quot;Contract Price Change&quot;)
&amp;&amp;
ISPICKVAL( Status__c , &quot;Rejected&quot;), &quot;Rejected&quot;,

IF(ISPICKVAL( Change_Order_Type__c , &quot;Contract Price Change&quot;)
&amp;&amp;
(ISPICKVAL( Status__c , &quot;Approval Pending&quot;)
 || 
ISPICKVAL( Status__c , &quot;Borrego Approved&quot;)
 || 
ISPICKVAL( Status__c , &quot;New&quot;)), IMAGE(&quot;//chart.googleapis.com/chart?chst=d_text_outline&amp;chld=FF0000|14|l|FFFFFF|_| This contract adjustment will not take effect until the Status is Approved by Customer&quot;,&quot;This contract adjustment will not take effect until the Status is Approved by Customer&quot;),

IF(ISPICKVAL( Change_Order_Type__c , &quot;Contract Price Change&quot;) 
&amp;&amp; 
ISPICKVAL( Status__c , &quot;Approved By Customer&quot;),IMAGE(&quot;//chart.googleapis.com/chart?chst=d_text_outline&amp;chld=006400|14|l|FFFFFF|_| The contract price has been updated&quot;,&quot;The contract price has been updated&quot;), 

&quot;Recalled&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Message regarding approval status</inlineHelpText>
        <label>Approval Status Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Change_Order_Total__c</fullName>
        <description>Displays the new grand total of the PO once the change has been approved</description>
        <label>Approved Change Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Backcharge_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the CO is a backcharge, who is the backcharge to? 
Must be an Account in Salesforce
Required if &quot;Backcharge&quot; checkbox is checked</inlineHelpText>
        <label>Backcharge To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Change Orders (Backcharge To)</relationshipLabel>
        <relationshipName>Change_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backcharge__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the CO a backcharge? 
Checked = yes (Backcharge To field is required)
Not Checked = no</inlineHelpText>
        <label>Backcharge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Line_Item2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Line Item the Change Order is applied to</inlineHelpText>
        <label>Budget Line Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project_Task__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Budget Line Item</value>
            </filterItems>
            <filterItems>
                <field>$Source.ASProject__c</field>
                <operation>equals</operation>
                <valueField>AcctSeed__Project_Task__c.AcctSeed__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Change Orders</relationshipLabel>
        <relationshipName>Change_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Line Item</label>
        <referenceTo>Budget_Line_Item__c</referenceTo>
        <relationshipName>ConReq</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COStatusDateChange__c</fullName>
        <description>auto fills via a WF whenever status is changed, 
no need to be on layouts or visible to anyone but Admin, used in conjunction with FLAG formula field on Material Change Orders</description>
        <inlineHelpText>auto fills via a WF whenever status is changed,</inlineHelpText>
        <label>CO Status Date Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CO__c</fullName>
        <inlineHelpText>Change Order Number</inlineHelpText>
        <label>CO #</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar_Days_Delayed__c</fullName>
        <inlineHelpText>Number of calendar days the project will be delayed due to Change Order</inlineHelpText>
        <label>Calendar Days Delayed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cartage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cartage (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Change_Order_Notes__c</fullName>
        <label>Change Order Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Order_Number__c</fullName>
        <description>Manually entered number to identify a subcontractor change order.</description>
        <inlineHelpText>Enter a number to identify this subcontractor change order.  Ideally this number will be unique for this project.</inlineHelpText>
        <label>Change Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Order_Status__c</fullName>
        <description>Independent from, but used to mirror Status of Purchase Order Line.</description>
        <label>Change Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Aaron Approved</fullName>
                </value>
                <value>
                    <fullName>PM Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted to Vendor</fullName>
                </value>
                <value>
                    <fullName>Vendor Received PO</fullName>
                </value>
                <value>
                    <fullName>Shipment Scheduled</fullName>
                </value>
                <value>
                    <fullName>Vendor Shipped Material</fullName>
                </value>
                <value>
                    <fullName>Shipment On Hold</fullName>
                </value>
                <value>
                    <fullName>Material Partially Received</fullName>
                </value>
                <value>
                    <fullName>Material Received In-Full</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Order_Type__c</fullName>
        <inlineHelpText>Type of Customer CO
Notes whether you are adding products, taking away products, changing contract price, or changing system size</inlineHelpText>
        <label>Change Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>System Size or Product Change</fullName>
                </value>
                <value>
                    <fullName>Contract Price Change</fullName>
                </value>
                <value>
                    <fullName>Add Product to Opportunity</fullName>
                </value>
                <value>
                    <fullName>Remove Product from Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Ship_Date__c</fullName>
        <label>Confirmed Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Code</label>
        <referenceTo>Cost_Code__c</referenceTo>
        <relationshipName>Construction_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Change_Order_Subtotal__c</fullName>
        <inlineHelpText>Amount of Current Change Order</inlineHelpText>
        <label>Cost Breakdown Total</label>
        <summarizedField>Cost_Breakdown__c.Total__c</summarizedField>
        <summaryForeignKey>Cost_Breakdown__c.Construction_Requisition__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Project_System_SizeCOConReq_New__c</fullName>
        <label>Current Project System Size-OLD</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Project_System_SizeCOConReq__c</fullName>
        <formula>ASProject__r.AcctSeed__Opportunity__r.Project_System_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current size of the project, pulls from the Current Project System Size field on the Opportunity</inlineHelpText>
        <label>Current Project System Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Unit_Cost__c</fullName>
        <description>Used to total the value of a subcontractor change order</description>
        <formula>Amount_Requested__c  +  Original_Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who are you sending the CO to?
Must be a Contact in Salesforce</inlineHelpText>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Change Orders (Customer Contact)</relationshipLabel>
        <relationshipName>Change_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <description>Records the date the CO was approved. Used in reporting. Filled out by approval process.</description>
        <inlineHelpText>Records the date the CO was approved. Used in reporting.</inlineHelpText>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Needed__c</fullName>
        <label>Date Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_for_Approval__c</fullName>
        <description>Date CO was submitted for approval. Used in reporting. Updated by approval process.</description>
        <inlineHelpText>Date CO was submitted for approval. Used in reporting.</inlineHelpText>
        <label>Date Submitted for Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Prints out on CO
Used to add more description around what the CO is for</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Development_Line_Item__c</fullName>
        <description>used to break down costs on CO and SOL&apos;s</description>
        <label>Development Line Item</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Development_Cost_Line_Item</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drive_Rate__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Drive Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drive_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Drive Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESD_Change_Order_Total__c</fullName>
        <inlineHelpText>Rollup Summary of Total on Cost Breakdowns with ESD = TRUE</inlineHelpText>
        <label>ESD Change Order Total</label>
        <summarizedField>Cost_Breakdown__c.Total__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Breakdown__c.ESD__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Breakdown__c.Construction_Requisition__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Final_Change_Order_Amount__c</fullName>
        <formula>IF( RecordType.Name = &quot;Customer Change Order&quot;, Current_Change_Order_Subtotal__c, Amount_Requested__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Final amount of the CO, includes tax, additional costs, etc.</inlineHelpText>
        <label>Final Change Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <description>field changes value based on criteria around Change Order Status and other values</description>
        <formula>IF(
AND(
ISPICKVAL (Change_Order_Status__c , &quot;Open&quot;),
ISPICKVAL( Purchase_Order2__r.AcctSeedERP__Status__c , &quot;Open&quot;),
DATEVALUE(CreatedDate + 2) &lt;= TODAY()),&quot;Not Yet Submitted&quot;,

IF( 
AND( 
OR(ISPICKVAL( Purchase_Order2__r.AcctSeedERP__Status__c, &quot;PM Approved&quot;), ISPICKVAL(  Purchase_Order2__r.AcctSeedERP__Status__c , &quot;Aaron Approved&quot;)), 
ISPICKVAL (Change_Order_Status__c , &quot;Open&quot;)), &quot;Not Yet Submitted&quot;, 


IF( 
AND( 
ISPICKVAL( Purchase_Order2__r.AcctSeedERP__Status__c, &quot;Need More Information&quot;), 
ISPICKVAL( Change_Order_Status__c , &quot;Open&quot;)), &quot;Missing Information&quot;, 

IF( 
AND( 
OR( 
ISPICKVAL( Purchase_Order2__r.AcctSeedERP__Status__c, &quot;Invoice Received&quot;), ISPICKVAL( Purchase_Order2__r.AcctSeedERP__Status__c, &quot;Invoice Processed&quot;)), 
Purchase_Order2__r.PO_Line_Total__c  - Purchase_Order2__r.AP_Invoice_Line_Total_CO_POL__c  = 0, 
TODAY() &gt; ( Purchase_Order2__r.PO_Status_Change_Date__c  +7)), &quot;Invoice Not Processed&quot;, 


IF( 
AND( 
OR( 
ISPICKVAL(  Change_Order_Status__c , &quot;Vendor Shipped Material&quot;), ISPICKVAL( Change_Order_Status__c, &quot;Shipment Scheduled&quot;), ISPICKVAL( Change_Order_Status__c , &quot;Material Partially Received&quot;), ISPICKVAL( Change_Order_Status__c, &quot;Material Received In-Full&quot;)),  
Purchase_Order2__r.PO_Line_Total__c  - Purchase_Order2__r.AP_Invoice_Line_Total_CO_POL__c &lt;&gt; 0, 
TODAY() &gt; (  COStatusDateChange__c  +7)), &quot;Invoice Missing&quot;, 


IF( 
AND( 
OR(ISPICKVAL( Change_Order_Status__c , &quot;Vendor Received PO&quot;), ISPICKVAL( Change_Order_Status__c , &quot;Submitted to Vendor&quot;)),
 Confirmed_Ship_Date__c  &lt; TODAY()
),  &quot;Confirm In Transit/Received&quot;, 

IF( 
AND( 
ISPICKVAL( Change_Order_Status__c , &quot;Vendor Shipped Material&quot;), 
ISBLANK(Confirmed_Ship_Date__c ) 
), &quot;Ship Date Not Populated&quot;, 

IF( 
AND( 
OR(ISPICKVAL( Change_Order_Status__c , &quot;Vendor Received PO&quot;),ISPICKVAL( Change_Order_Status__c , &quot;Submitted to Vendor&quot;)), 
Confirmed_Ship_Date__c &gt; TODAY()), &quot;Pending Shipment Approaching&quot;, 


IF( 
AND( 
OR(ISPICKVAL( Change_Order_Status__c, &quot;Vendor Received PO&quot;), ISPICKVAL( Change_Order_Status__c , &quot;Submitted to Vendor&quot;)), 
ISBLANK(  Purchase_Order2__r.SOA_Returned__c  ), 
 Purchase_Order2__r.AcctSeedERP__Order_Date__c  &lt; (TODAY()-7) ,
NOT(ISBLANK(Confirmed_Ship_Date__c)) 

), &quot;SOA Missing&quot;, 

IF( 
AND( 
OR( 
ISPICKVAL( Change_Order_Status__c , &quot;Vendor Received PO&quot;), ISPICKVAL( Change_Order_Status__c , &quot;Material Deposit Paid&quot;) 
), 
ISBLANK(Confirmed_Ship_Date__c ) 
), &quot;Confirm Ship Date&quot;, 



IF( 
ISPICKVAL( Change_Order_Status__c  , &quot;Shipment On Hold&quot;), &quot;On Hold&quot;, 


IF( 
 Purchase_Order2__r.PO_Line_Total__c  - Purchase_Order2__r.AP_Invoice_Line_Total_CO_POL__c  = 0, &quot;All Costs Received&quot;,

IF( 
ISPICKVAL( Change_Order_Status__c  , &quot;Closed&quot;), &quot;Closed&quot;, 

IF( 
ISPICKVAL( Change_Order_Status__c , &quot;Rejected&quot;), &quot;Rejected&quot;, 
IF( 
ISPICKVAL( Change_Order_Status__c  , &quot;Cancelled&quot;), &quot;Cancelled&quot;, 

NULL
)))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>field changes value based on criteria around Change Order Status and other values</inlineHelpText>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is hidden and used to generate error at the time of approval process execution for vendor type &apos;Business&apos;</description>
        <inlineHelpText>This field is hidden and used to generate error at the time of approval process execution for vendor type &apos;Business&apos;</inlineHelpText>
        <label>IsSubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Number2__c</fullName>
        <formula>ASProject__r.Job_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Job Number on Project</inlineHelpText>
        <label>Job Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <label>Job Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labor_Total__c</fullName>
        <formula>(Office_Admin_Rate__c * Office_Admin_Hours__c) + (System_Designer_Rate__c * System_Designer_Hours__c) +
(Project_Manager_Rate__c * Project_Manager_Hours__c ) + (Site_Super_Rate__c*Site_Super_Hours__c) + (Cartage__c* Current_Change_Order_Subtotal__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labor Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Freight_Allowance__c</fullName>
        <inlineHelpText>Total freight on affiliated PO 
Used for Materials CO&apos;s only</inlineHelpText>
        <label>Max Freight Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Misc_Materials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Misc. Materials (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_ProductCOConReq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Product you are changing or removing from the Opportunity</inlineHelpText>
        <label>Original Product-old</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Change Orders (Original Product)</relationshipLabel>
        <relationshipName>Construction_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Product that you would like to add to the Opportunity.</inlineHelpText>
        <label>New Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only &quot;Active&quot; products may be selected.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Change Orders (New Product)</relationshipLabel>
        <relationshipName>Change_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_QuantityCOConReq__c</fullName>
        <inlineHelpText>New quantity of the product you are adding to the CO or Opportunity</inlineHelpText>
        <label>New Quantity-old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Quantity__c</fullName>
        <inlineHelpText>Enter the quantity of either the new product to be added or the existing product to be changed.</inlineHelpText>
        <label>New Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_To_Exceed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the PO will be a Not To Exceed PO. Enter an estimated amount that will true up once the final invoice is received.</inlineHelpText>
        <label>Not To Exceed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office_Admin_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Office Admin Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Admin_Rate__c</fullName>
        <defaultValue>45.00</defaultValue>
        <label>Office Admin Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ok_to_Submit_Change_Order__c</fullName>
        <formula>IF ( 
		ISBLANK (  Purchase_Order2__r.Name  ),
	&quot;This requisition cannot be submitted for approval due to the following reasons:&quot; &amp;
	IF ( ISBLANK (  Purchase_Order2__r.Name  ), BR() &amp; &quot;You must select a PO Number&quot;, &quot;&quot;) ,&quot;Yes&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ok to Submit Change Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ok_to_Submit__c</fullName>
        <formula>If( Remaining_Available_Budget__c &lt;0, IMAGE(&quot;//chart.googleapis.com/chart?chst=d_text_outline&amp;chld=FF0000|14|l|FFFFFF|_|NO-CO AMT EXCEEDS BUDGET&quot;,&quot;NO-CO AMT EXCEEDS BUDGET&quot;), 
IF( ISPICKVAL( Status__c , &quot;Borrego Approved&quot;), IMAGE(&quot;//chart.googleapis.com/chart?chst=d_text_outline&amp;chld=FF0000|14|l|FFFFFF|_|NO-CO Already Approved&quot;,&quot;NO-CO Already Approved&quot;), 
IF( ISPICKVAL( Status__c , &quot;Customer Approved&quot;), IMAGE(&quot;//chart.googleapis.com/chart?chst=d_text_outline&amp;chld=FF0000|14|l|FFFFFF|_|NO-CO Already Approved&quot;,&quot;NO-CO Already Approved&quot;), 
IMAGE(&quot;//chart.googleapis.com/chart?chst=d_text_outline&amp;chld=006400|14|l|FFFFFF|_| YES&quot;,&quot;YES&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the CO ok to submit?</inlineHelpText>
        <label>Ok to Submit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Contract_Price2__c</fullName>
        <formula>Purchase_Order2__r.Subtotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Also refers to Original PO value.</inlineHelpText>
        <label>Original Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Contract_Price3__c</fullName>
        <formula>ASProject__r.Original_Contract_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Original Customer Contract price from the project &quot;Original Contract Price&quot; field.</inlineHelpText>
        <label>Original Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Contract_Price__c</fullName>
        <label>Original Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Contract_System_SizeCOConReq__c</fullName>
        <formula>ASProject__r.AcctSeed__Opportunity__r.Original_Contract_System_Size__c</formula>
        <inlineHelpText>Original system size per the contract
Pulls from the Original System Size on the Opportunity</inlineHelpText>
        <label>Original Contract System Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_OpportunityLineItemId__c</fullName>
        <description>HIdden field. Stores the OpportunityLineItem Id that is associated with the Original Product that has been selected by the user for change.</description>
        <label>Original OpportunityLineItemId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Change Orders (Original Product)</relationshipLabel>
        <relationshipName>Change_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_ProjectProductId__c</fullName>
        <description>HIdden field. Stores the Project Product Id that is associated with the Original Product that has been selected by the user for change.</description>
        <label>Original ProjectProductId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Unit_Price2__c</fullName>
        <formula>Purchase_Order2__r.Subtotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PO Subtotal.</inlineHelpText>
        <label>Original Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Unit_Price__c</fullName>
        <label>Original Unit Price-old</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_reason_explanation__c</fullName>
        <inlineHelpText>If Other was selected, enter details here to explain why. You can also use this field for any other relevant details for why the Change Order is necessary.</inlineHelpText>
        <label>Additional reason details</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overhead_Total__c</fullName>
        <formula>Overhead__c * ( Current_Change_Order_Subtotal__c +  Labor_Total__c +  Additional_Cost_Total__c + Sales_Tax__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overhead Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overhead__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Overhead (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner_Supplied_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>corresponds with checkbox on 
Oppty products page when “Approved By Customer” is pressed</description>
        <label>Owner Supplied Product</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>